--- a/subsystems/mvp/TODO.txt
+++ b/subsystems/mvp/TODO.txt
@@ -1,5 +1,15 @@
+NEXT: add CLI REPL
+
+
 * combine ra-horns with another icon for an enemy
   - All background/outlines drawn first, and then all foregrounds drawn on top.
 * Use different animal symbols, including the bunny, the wolf, and the lion as
   various enemies.
-* Use sick icons for gear on top of the player. 
+* Use sick icons for gear on top of the player.
+* Have tile position within land stay consistent as long as the player does not
+  leave that land in the terrain view. When the player does leave the land and
+  enter a new land, their tile position in that land should be based on the
+  direction that they came from. The player will be in the middle of the edge
+  of the side that they came from. Use the "drive on the right side rule" e.g.
+  if coming from the top the player will be just left of center in the top row
+  (index 3) since they are traveling downward
