Add enemy variety system with 7 unique enemy types and improved world layout
Implement diverse enemy roster with unique RPG Awesome graphics (Rabbit, Fox,
Wolf, Spider, Snake, Lion, Dragon) distributed based on biome theme and
difficulty progression. Redesign 5x5 world biome layout for clearer
top-left (easy) to bottom-right (hard) progression with Meadow/Plains start
areas transitioning through Forests to Mountain endgame.

Backend:
- Add EnemyType enum with 7 variants and display_name() method
- Update Enemy struct to include enemy_type field
- Rearrange biome grid: Meadow/Plains (easy) → Forest → Mountain (hard)
- Implement mixed biome/difficulty enemy placement (16 encounters)
- Add enemy_type to TerrainEnemyInfo and CombatGameState API responses
- Serialize enemy types in state builder

Frontend:
- Add 7 unique enemy graphics with thematic colors
- Update combat view to display enemy-specific sprites
- Show enemy type name instead of generic "Enemy" label

Enemy progression: Rabbit (6-8 HP) → Fox → Wolf/Spider/Snake → Lion → Dragon (22 HP)
All 14 E2E tests pass.

--- a/subsystems/mvp/TODO.txt
+++ b/subsystems/mvp/TODO.txt
@@ -1,11 +1,14 @@
 NEXT: add CLI REPL
+THEN: refactor the README
 
 
-* combine ra-horns with another icon for an enemy
-  - All background/outlines drawn first, and then all foregrounds drawn on top.
-* Use different animal symbols, including the bunny, the wolf, and the lion as
-  various enemies.
-* Use sick icons for gear on top of the player.
+* first step crafting: copy the important data structures from
+  crafting_tinkers
+* early progression content
+* crafting mechanic
+* quest system to guide early progression
+
+
 * Have tile position within land stay consistent as long as the player does not
   leave that land in the terrain view. When the player does leave the land and
   enter a new land, their tile position in that land should be based on the
@@ -13,3 +16,13 @@ NEXT: add CLI REPL
   of the side that they came from. Use the "drive on the right side rule" e.g.
   if coming from the top the player will be just left of center in the top row
   (index 3) since they are traveling downward
+
+
+* minimap of terrain view when in land view
+  * stretch: animate terrain view becoming minimap
+  * stretch: animate singular lad tile becoming full spread land
+* combine ra-horns with another icon for an enemy
+  - All background/outlines drawn first, and then all foregrounds drawn on top.
+* Use different animal symbols, including the bunny, the wolf, and the lion as
+  various enemies.
+* Use sick icons for gear on top of the player.
