Frontend: Add graphics for clay and flint items
Add visual representations for clay and flint crafting materials using
RPG Awesome icons:
- Clay: ra-vase with terracotta orange/brown colors (pottery/earth theme)
- Flint: ra-rune-stone with gray-blue/slate colors (stone tool material)

Graphics added to GRAPHICS object and mapped in OBJECT_GRAPHICS for
display in inventory, equipment, and tile views.

--- a/subsystems/mvp/TODO.txt
+++ b/subsystems/mvp/TODO.txt
@@ -6,6 +6,8 @@ THEN: refactor the README
   crafting_tinkers
 * early progression content
 * crafting mechanic
+* content
+@ multi display floor items (2x2 then 3x3 max 4x4)
 * quest system to guide early progression
 
 
