Update clay and flint graphics to use ball and diamonds icons
Change icon representations:
- Clay: ra-vase → ra-ball (spherical clay ball/lump)
- Flint: ra-rune-stone → ra-diamonds (crystalline stone structure)

Colors remain the same (terracotta orange/brown for clay, gray-blue/slate
for flint). Icons better represent the materials' physical appearance.

--- a/subsystems/mvp/TODO.txt
+++ b/subsystems/mvp/TODO.txt
@@ -7,10 +7,12 @@ THEN: refactor the README
 * early progression content
 * crafting mechanic
 * content
-@ multi display floor items (2x2 then 3x3 max 4x4)
+@
+* durability
 * quest system to guide early progression
 
 
+* multi display floor items (2x2 then 3x3 max 4x4)
 * Have tile position within land stay consistent as long as the player does not
   leave that land in the terrain view. When the player does leave the land and
   enter a new land, their tile position in that land should be based on the
